--- a/client/web/static/css/content.css
+++ b/client/web/static/css/content.css
@@ -2,6 +2,13 @@ div.content-section {
     margin: 30px 0;
 }
 
+#content {
+    border-style: solid;
+    border-color: #bbbbbb;
+    border-width: 2px;
+    padding: 5px;
+}
+
 #content-title {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     letter-spacing: -1px;
