--- a/client/web/static/css/nav.css
+++ b/client/web/static/css/nav.css
@@ -3,7 +3,7 @@ nav {
     width: 160px;
 
     border-style: solid;
-    border-color: #bbbbbb;
+    border-color: #cccccc;
     border-width: 2px;
     padding: 5px;
 }
