--- a/client/web/static/css/content.css
+++ b/client/web/static/css/content.css
@@ -4,7 +4,7 @@ div.content-section {
 
 #content {
     border-style: solid;
-    border-color: #bbbbbb;
+    border-color: #cccccc;
     border-width: 2px;
     padding: 5px;
 }
