Integrated routing to drive page layout.

--- a/client/web/static/css/content.css
+++ b/client/web/static/css/content.css
@@ -9,6 +9,13 @@ div.content-section {
     padding: 5px;
 }
 
+#content.sign-up {
+    margin: auto;
+    position: relative;
+    float: none;
+    display: block;
+}
+
 #content-title {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     letter-spacing: -1px;
