--- a/client/web/static/css/custom.css
+++ b/client/web/static/css/custom.css
@@ -2,6 +2,7 @@
 @import url("nav.css");
 @import url("content.css");
 @import url("title-bar.css");
+@import url("forms.css");
 @import url("media-query.css");
 
 .hidden {
