--- a/client/web/static/css/media-query.css
+++ b/client/web/static/css/media-query.css
@@ -3,6 +3,7 @@
     nav { position: relative; }
     nav ul { display: none; }
     #logo { text-align: left; }
+    #sign-up-div { margin-top: 20px; }
 }
 
 /* Mobile Landscape */
