--- a/client/web/js/templates/sidebar-nav-layout.hbs
+++ b/client/web/js/templates/sidebar-nav-layout.hbs
@@ -1,16 +1,8 @@
 <nav>
-    <h4 id="logo">Navigation</h4>
     <ul>
-        <li><a href="#whatAndWhy">What &amp; Why</a></li>
-        <li><a href="#grid">Grid</a></li>
-        <li><a href="#typography">Typography</a></li>
-        <li><a href="#buttons">Buttons</a></li>
-        <li><a href="#forms">Forms</a></li>
-        <li><a href="#mediaQueries">Media Queries</a></li>
-        <li><a href="#support">Support</a></li>
-        <li><a href="#examples">Examples</a></li>
-        <li><a href="#download">Download</a></li>
-        <li><a href="#licenseandlog">License &amp; Log</a></li>
+        <li><a href="#!/{{user_name}}">Tweets</a></li>
+        <li><a href="#!/{{user_name}}/following">Following</a></li>
+        <li class="bottom"><a href="#!/{{user_name}}/followers">Followers</a></li>
     </ul>
 </nav>
 &nbsp;
