Major client gui overhaul pulling in bootstrap.

--- a/client/web/js/templates/login-layout.hbs
+++ b/client/web/js/templates/login-layout.hbs
@@ -1,37 +1,22 @@
-<h2>Welcome to OpenTweet!</h2>
-
-<div class="row">
-    <div class="six columns alpha">
-        <span>Login if you've already joined!</span>
-        <br>
-
-        <label for="regularInput">Username</label>
-        <input type="text" id="username-login"/>
-
-        <!-- Label and text input -->
-        <label for="regularInput">Password</label>
-        <input type="password" id="password-login"/>
-
-        <button type="submit" id="login-button" disabled>Login</button>
-    </div>
-
-    <div id="sign-up-div" class="six columns omega">
-        <span>Sign up if you are new!</span>
-        <br>
-
-        <label for="regularInput">Username</label>
-        <input type="text" id="username-sign-up"/>
-
-        <!-- Label and text input -->
-        <label for="regularInput">Password</label>
-        <input type="password" id="password-sign-up"/>
-
-        <label for="regularInput">E-Mail</label>
-        <input type="text" id="email-sign-up"/>
-
-        <label for="regularInput">Sound Byte</label>
-        <input type="text" id="sound-byte-sign-up"/>
-
-        <button type="submit" id="sign-up-button" disabled>Sign Up for OpenTweet</button>
-    </div>
+<div class="panel-heading">Login to OpenTweet!</div>
+<div class="panel-body">
+    <form class="form-horizontal" role="form">
+        <div class="form-group">
+            <label for="login-user-name" class="col-sm-2 control-label">Email</label>
+            <div class="col-sm-8">
+                <input type="text" class="form-control" id="login-user-name" placeholder="User Name">
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="login-password" class="col-sm-2 control-label">Password</label>
+            <div class="col-sm-8">
+                <input type="password" class="form-control" id="login-password" placeholder="Password">
+            </div>
+        </div>
+        <div class="form-group bottom">
+            <div class="col-sm-offset-2 col-sm-6">
+                <button id="login-button" type="button" class="btn btn-default">Log In</button>
+            </div>
+        </div>
+    </form>
 </div>
