Continuing to clean up the UI.

--- a/client/web/js/templates/side-bar-layout.hbs
+++ b/client/web/js/templates/side-bar-layout.hbs
@@ -1,6 +1,6 @@
-<div class="panel-heading">{{user_name}}</div>
+<div class="panel-heading"><a id="side-bar-heading" href="#!/{{user_name}}"><h3>{{user_name}}</h3></a></div>
 <div class="list-group">
-    <a href="#!/{{user_name}}" class="list-group-item">Tweets</a>
-    <a href="#!/{{user_name}}/followers" class="list-group-item">Followers</a>
-    <a href="#!/{{user_name}}/following" class="list-group-item">Following</a>
+    <a id="user-tweets-item" href="#!/{{user_name}}/tweets" class="list-group-item">Tweets</a>
+    <a id="user-followers-item" href="#!/{{user_name}}/followers" class="list-group-item">Followers</a>
+    <a id="user-following-item" href="#!/{{user_name}}/following" class="list-group-item">Following</a>
 </div>
