--- a/client/web/static/css/custom.css
+++ b/client/web/static/css/custom.css
@@ -2,6 +2,20 @@ body {
     padding-top: 60px;
 }
 
+textarea {
+    resize: none;
+    margin-bottom: 10px;
+}
+
+.vertical-align {
+    display:inline-block;
+    vertical-align:middle;
+}
+
+.vertical-align.tweet-char-count {
+    margin-left: 10px;
+}
+
 #side-bar div.list-group {
     margin-bottom: 0;
 }
