Supporting unfollowing of users. Prettified the display of tweets and users.

--- a/client/web/js/templates/tweet-item-view.hbs
+++ b/client/web/js/templates/tweet-item-view.hbs
@@ -1,2 +1,9 @@
-{{message}}
-{{timestamp}}
+<div class="media">
+    <div class="pull-right">
+        <div class="media-object">{{timestamp}}</div>
+    </div>
+    <div class="media-body">
+        <a href="#!/{{user_name}}"><strong>{{user_name}}</strong></a>
+        {{message}}
+    </div>
+</div>
