--- a/client/web/js/templates/navigation-bar-layout.hbs
+++ b/client/web/js/templates/navigation-bar-layout.hbs
@@ -1,5 +1,5 @@
 <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-element">
+    <button type="button" class="navbar-toggle hidden" data-toggle="collapse" data-target="#navbar-collapse-element">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -8,10 +8,10 @@
     <a class="navbar-brand" href="#">Open Tweet</a>
 </div>
 
-<div class="collapse navbar-collapse" id="navbar-collapse-element">
-    <form class="navbar-form navbar-left" role="search">
+<div class="collapse navbar-collapse hidden" id="navbar-collapse-element">
+    <form class="navbar-form navbar-left" role="search" onsubmit="return false;">
         <div class="form-group">
-            <input type="text" class="form-control" placeholder="Search for User">
+            <input id="user-query" type="text" class="form-control" placeholder="Search for User">
         </div>
     </form>
 </div>
