--- a/client/web/static/css/custom.css
+++ b/client/web/static/css/custom.css
@@ -29,24 +29,28 @@ textarea {
     margin-bottom: 0;
 }
 
+.media-body.tweet-body {
+    word-wrap: break-word;
+}
+
 /* media queries */
 
 @media (min-width: 992px) {
-    #side-bar div.panel.panel-default {
+    #side-bar div.list-group {
         position: fixed;
         width: 213px;
     }
 }
 
 @media (min-width: 1200px) {
-    #side-bar div.panel.panel-default {
+    #side-bar div.list-group {
         position: fixed;
         width: 263px;
     }
 }
 
 @media (max-width: 767px) {
-    #side-bar div.panel.panel-default {
+    #side-bar div.list-group {
         position: relative;
     }
 }
