--- a/client/web/js/templates/tweet-item-view.hbs
+++ b/client/web/js/templates/tweet-item-view.hbs
@@ -2,7 +2,7 @@
     <div class="pull-right">
         <div class="media-object">{{timestamp}}</div>
     </div>
-    <div class="media-body">
+    <div class="media-body tweet-body">
         <a href="#!/{{user_name}}"><strong>{{user_name}}</strong></a>
         {{message}}
     </div>
