--- a/client/web/js/templates/navigation-bar-layout.hbs
+++ b/client/web/js/templates/navigation-bar-layout.hbs
@@ -14,4 +14,7 @@
             <input id="user-query" type="text" class="form-control" placeholder="Search for User">
         </div>
     </form>
+    <ul class="nav navbar-nav navbar-left">
+        <li><a href="/signout">Sign Out</a></li>
+    </ul>
 </div>
