--- a/client/web/js/templates/login-layout.hbs
+++ b/client/web/js/templates/login-layout.hbs
@@ -15,7 +15,7 @@
         </div>
         <div class="form-group bottom">
             <div class="col-sm-offset-2 col-sm-6">
-                <button id="login-button" type="button" class="btn btn-default">Log In</button>
+                <button id="login-button" type="button" class="btn btn-default" disabled>Log In</button>
             </div>
         </div>
     </form>
