Added error messages for failed login or sign-up.

--- a/client/web/js/templates/login-layout.hbs
+++ b/client/web/js/templates/login-layout.hbs
@@ -16,6 +16,7 @@
         <div class="form-group bottom">
             <div class="col-sm-offset-2 col-sm-6">
                 <button id="login-button" type="button" class="btn btn-default" disabled>Log In</button>
+                <p class="text-danger error-text hidden">Invalid user or password.</p>
             </div>
         </div>
     </form>
