--- a/client/web/js/templates/new-user-layout.hbs
+++ b/client/web/js/templates/new-user-layout.hbs
@@ -28,6 +28,7 @@
         <div class="form-group bottom">
             <div class="col-sm-offset-2 col-sm-6">
                 <button id="sign-up-button" type="button" class="btn btn-default" disabled>Sign Up</button>
+                <p class="text-danger error-text hidden">Try a different username.</p>
             </div>
         </div>
     </form>
