--- a/client/web/js/templates/tweet-item-view.hbs
+++ b/client/web/js/templates/tweet-item-view.hbs
@@ -1,9 +1,9 @@
 <div class="media">
     <div class="pull-right">
-        <div class="media-object">{{timestamp}}</div>
+        <div class="media-object">{{displayTime}}</div>
     </div>
     <div class="media-body tweet-body">
         <a href="#!/{{user_name}}"><strong>{{user_name}}</strong></a>
-        {{message}}
     </div>
+    {{message}}
 </div>
